<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_gravity="start"
    android:id="@+id/menu"
    xmlns:switch="http://schemas.android.com/apk/res-auto"
    android:layout_height="match_parent">
<RelativeLayout
    android:background="@mipmap/side_top_bg"
    android:layout_width="match_parent"
    android:layout_height="200dp">

</RelativeLayout>

    <LinearLayout
        android:orientation="vertical"
        android:background="#141414"
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <RelativeLayout
            style="@style/match_item">
            <TextView
                android:text="@string/enable_notify"
                style="@style/siwtch_item"
                />

            <eq.tools.equlizer_globle.View.SwitchButton
                android:id="@+id/switch_notify"
                switch:onImage="@mipmap/side_button01_on"
                switch:offImage="@mipmap/side_button01_off"
                style="@style/siwtch" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/match_item">
            <TextView
                android:text="@string/enable_vibrate"
                style="@style/siwtch_item"
                />

            <eq.tools.equlizer_globle.View.SwitchButton
                android:id="@+id/switch_vibrate"
                switch:onImage="@mipmap/side_button01_on"
                switch:offImage="@mipmap/side_button01_off"
                style="@style/siwtch" />
        </RelativeLayout>

        <RelativeLayout
            style="@style/match_item">
            <TextView
                android:text="@string/enable_light"
                style="@style/siwtch_item"
                />

            <eq.tools.equlizer_globle.View.SwitchButton
                android:id="@+id/switch_light"
                switch:onImage="@mipmap/side_button01_on"
                switch:offImage="@mipmap/side_button01_off"
                style="@style/siwtch" />
        </RelativeLayout>
        <View
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:background="#101010"
            android:layout_width="match_parent"
            android:layout_height="1dp"/>

        <TextView
            android:id="@+id/menu_spectrum"
            android:text="@string/menu_spectrum"
            android:drawableLeft="@drawable/menu_fq_selector"
            style="@style/base_item_tv"
            android:onClick="onSideItemClick"
             />

        <TextView
            android:id="@+id/menu_rate"
            android:text="@string/menu_rate"
            android:drawableLeft="@drawable/rate_for_us_selector"
            style="@style/base_item_tv"
            android:onClick="onSideItemClick"
            />

        <TextView
            android:id="@+id/menu_recommand"
            android:text="@string/menu_recommand"
            android:drawableLeft="@mipmap/side_icon03"
            style="@style/base_item_tv"
            android:onClick="onSideItemClick"
            />

    </LinearLayout>
</LinearLayout>